# Liniowe_Project1

./: CMakeLists.txt  Makefile
src/: LinkedList.h  Vector.hpp  main.cpp
test/: LinkedListTests.cpp  VectorTests.cpp
